<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>uk.ac.ox.it</groupId>
  <artifactId>calendar-importer</artifactId>
  <version>3.1.1-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>Calendar Import</name>
  <description>Tool to allow CSV files to be imported into Canvas calendar.</description>
  <licenses>
    <license>
      <name>Apache-2.0</name>
      <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
      <comments>A business-friendly OSS license</comments>
    </license>
  </licenses>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.2.12</version>
    <relativePath/> <!-- lookup parent from repository -->
  </parent>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <java.version>21</java.version>
    <!-- Set defaults so jib works without any additional settings -->
    <git.commit.id>unknown</git.commit.id>
    <jib.tag>unknown</jib.tag>
  </properties>

  <scm>
    <connection>scm:git:ssh://git@github.com/oxctl/canvas-calendar-import.git</connection>
    <developerConnection>scm:git:ssh://git@github.com/oxctl/canvas-calendar-import.git</developerConnection>
    <url>https://github.com/oxctl/canvas-calendar-import</url>
    <tag>unknown</tag>
  </scm>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>io.awspring.cloud</groupId>
        <artifactId>spring-cloud-aws-dependencies</artifactId>
        <version>3.1.0</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>io.sentry</groupId>
        <artifactId>sentry-bom</artifactId>
        <version>7.20.0</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-mail</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-quartz</artifactId>
    </dependency>
    <!-- This gives us better visibility into the app in production -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-actuator</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-security</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-oauth2-jose</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-data-rest</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-cache</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-webflux</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-oauth2-client</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-json</artifactId>
    </dependency>
    <!-- Needed for Instant parsing -->
    <dependency>
      <groupId>com.fasterxml.jackson.datatype</groupId>
      <artifactId>jackson-datatype-jsr310</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-devtools</artifactId>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>com.amazonaws.secretsmanager</groupId>
      <artifactId>aws-secretsmanager-jdbc</artifactId>
      <version>2.0.2</version>
    </dependency>
    <dependency>
        <groupId>io.awspring.cloud</groupId>
        <artifactId>spring-cloud-aws-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>io.awspring.cloud</groupId>
      <artifactId>spring-cloud-aws-starter-s3</artifactId>
    </dependency>
    <dependency>
      <groupId>io.awspring.cloud</groupId>
      <artifactId>spring-cloud-aws-starter-secrets-manager</artifactId>
    </dependency>

    <!-- Just using this so we have have better logging of stuff on the wire. -->
    <dependency>
      <groupId>org.apache.httpcomponents</groupId>
      <artifactId>httpcomponents-client</artifactId>
      <version>4.5.7</version>
      <type>pom</type>
    </dependency>

    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <optional>true</optional>
    </dependency>

    <dependency>
      <groupId>uk.ac.ox.ctl</groupId>
      <artifactId>canvas-api</artifactId>
      <version>1.6.1</version>
    </dependency>

    <dependency>
      <groupId>org.mnode.ical4j</groupId>
      <artifactId>ical4j</artifactId>
      <version>2.2.0</version>
    </dependency>

    <dependency>
      <groupId>org.hibernate.orm</groupId>
      <artifactId>hibernate-jcache</artifactId>
    </dependency>
    <dependency>
      <groupId>org.ehcache</groupId>
      <artifactId>ehcache</artifactId>
      <classifier>jakarta</classifier>
    </dependency>

    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-csv</artifactId>
      <version>1.8</version>
    </dependency>

    <dependency>
      <groupId>com.mysql</groupId>
      <artifactId>mysql-connector-j</artifactId>
      <version>8.4.0</version>
    </dependency>
    <dependency>
      <groupId>io.sentry</groupId>
      <artifactId>sentry-spring-boot-starter-jakarta</artifactId>
    </dependency>
    <dependency>
      <groupId>io.sentry</groupId>
      <artifactId>sentry-logback</artifactId>
    </dependency>

    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-text</artifactId>
      <version>1.10.0</version>
    </dependency>

    <dependency>
      <groupId>jakarta.persistence</groupId>
      <artifactId>jakarta.persistence-api</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-validation</artifactId>
    </dependency>

    <!-- Using H2 in development/test -->
    <dependency>
      <groupId>com.h2database</groupId>
      <artifactId>h2</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.hamcrest</groupId>
      <artifactId>hamcrest</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>net.sourceforge.htmlunit</groupId>
      <artifactId>htmlunit</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-configuration-processor</artifactId>
      <optional>true</optional>
    </dependency>
  </dependencies>

  <build>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <!-- This is needed otherwise the filtering doesn't appear to happen despite messages to the contrary -->
        <!-- This is used to get the git SHA into the index.html file -->
        <filtering>true</filtering>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <executions>
          <execution>
            <goals>
              <goal>build-info</goal>
            </goals>
            <configuration>
              <additionalProperties>
                <!-- This is set by the git-commit-id-plugin -->
                <!--suppress UnresolvedMavenProperty -->
                <git.commit.id>${git.commit.id}</git.commit.id>
              </additionalProperties>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>io.github.git-commit-id</groupId>
        <artifactId>git-commit-id-maven-plugin</artifactId>
        <configuration>
          <verbose>false</verbose>
        </configuration>
      </plugin>
      <plugin>
        <!-- This allows simple building of a dockerfile without complexity -->
        <groupId>com.google.cloud.tools</groupId>
        <artifactId>jib-maven-plugin</artifactId>
        <version>3.5.1</version>
        <dependencies>
            <!-- This isn't strictly needed but makes sense to include -->
            <dependency>
                <groupId>com.google.cloud.tools</groupId>
                <artifactId>jib-spring-boot-extension-maven</artifactId>
                <version>0.1.0</version>
            </dependency>
        </dependencies>
        <configuration>
          <pluginExtensions>
              <pluginExtension>
                  <implementation>
                      com.google.cloud.tools.jib.maven.extension.springboot.JibSpringBootExtension
                  </implementation>
              </pluginExtension>
          </pluginExtensions>
          <to>
            <tags>
              <tag>${project.version}</tag>
              <tag>${git.commit.id}</tag>
              <tag>${jib.tag}</tag>
            </tags>
          </to>
          <from>
            <!-- The alpine images are small but don't support arm64 so use ubuntu instead -->
            <image>gcr.io/distroless/java21-debian13</image>
            <platforms>
              <platform>
                <architecture>arm64</architecture>
                <os>linux</os>
              </platform>
              <platform>
                <architecture>amd64</architecture>
                <os>linux</os>
              </platform>
            </platforms>
          </from>
          <container>
            <!-- As we're in docker we really don't want to be running as root -->
              <user>nonroot:nonroot</user>
            <jvmFlags>
              <!-- The ZGC collector allows memory to be released back to the OS by default. -->
              <jvmFlag>-XX:+UseZGC</jvmFlag>
            </jvmFlags>
            <labels>
              <!-- This is just metadata about the repository that contains the source -->
              <org.opencontainers.image.source>https://github.com/oxctl/calendar-import</org.opencontainers.image.source>
            </labels>
          </container>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <version>3.0.0-M1</version>
        <configuration>
          <useReleaseProfile>false</useReleaseProfile>
          <!-- This is needed so shippable builds the tags -->
          <tagNameFormat>version-@{project.version}</tagNameFormat>
          <goals>install</goals>
        </configuration>
      </plugin>
      <plugin>
        <groupId>com.coveo</groupId>
        <artifactId>fmt-maven-plugin</artifactId>
        <version>2.8</version>
        <executions>
          <execution>
            <goals>
              <!-- Drop this from the build as it was breaking the build -->
<!--              <goal>format</goal>-->
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>


</project>
